fix viewport and stretch img

--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
 }
 .wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
+  align-items: stretch;
   margin: 1rem;
   border: 1px solid transparent;
   border-radius: var(--sz-border-radius);
